Ajout sexe, anniversaire et images pour les étudiants